# wews

./: .env  .gitignore  README.md  airflow.cfg  airflow.yml  custom.ini  docker-compose.yaml  pyproject.toml  wews-402510-7ad9cc194bdf.json
wews/: etl.py  main.py
wews/extractor/: base.py
wews/loader/: base.py
wews/sources/: base.py
wews/workers/: etl.py
